<resources>
    <string name="app_name">SCOS</string>
    <string name="order">点菜</string>
    <string name="viewOrder">查看订单</string>
    <string name="signInOrRegister">登录/注册</string>
    <string name="help">系统帮助</string>
    <string name="account">登录名</string>
    <string name="passWord">登录密码</string>
    <string name="Login">登录</string>
    <string name="back">返回</string>
    <string name="register">注册</string>
    <string name="coldThing">冷菜</string>
    <string name="hotThing">热菜</string>
    <string name="seaThing">海鲜</string>
    <string name="drink">酒水</string>
    <string name="add">点菜</string>
    <string name="sample">sample    worth</string>
    <string name="ordered">已点菜品</string>
    <string name="viewOrdered">查看订单</string>
    <string name="callForService">呼叫服务</string>
    <string name="pay">提交订单</string>
    <string name="others">备注</string>
    <string name="payForList">结账</string>
    <string name="delete">退菜</string>
    <string name="foodSum">菜品总数</string>
    <string name="worthSum">菜品总价</string>
</resources>
