<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ordered"
        android:title="@string/ordered"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/viewOrdered"
        android:title="@string/viewOrdered"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/callForService"
        android:title="@string/callForService"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/updateInformation"
        android:title="实时更新"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/updateServiceTest"
        android:title="updateServiceTest"
        app:showAsAction="ifRoom"
        />


</menu>
